--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,9 +117,10 @@ img {
    ========================================================================== */
 
 
-$white: #fff;
+$white: #eee;
 $plum: #473355;
-$grey: #545256;
+$grey: #444;
+$black: #000;
 
 body {
     font-family:"akzidenz-grotesk bq condensed",'Oswald',gotham-book, sans-serif;
@@ -161,10 +162,8 @@ ul{padding:0;margin:0;}
 }
 
 .header-container{
-    height:100vh;
-        background:transparent url(img/silo-dessert.jpg) no-repeat;
-        background-attachment:fixed;
-        background-size:cover;
+    height:95vh;
+
     img{
         width:100%;
         border-radius: 0;
@@ -173,6 +172,11 @@ ul{padding:0;margin:0;}
         font-size:1.5em;
         display:inline-block;
     }
+    .cover{
+        width:100%;
+        height:100%;
+
+    }
 }
 
 .about{
@@ -180,8 +184,13 @@ ul{padding:0;margin:0;}
     height:100%;
     text-align:center;
     position:relative;
-    text-shadow:0.07em 0.07em 0 $grey;
+    text-shadow:0.07em 0.07em 0.05em $black;
     padding:25% 5%;
+    z-index:1001;
+
+    background:transparent url(img/silo-dessert.jpg) no-repeat;
+        background-attachment:fixed;
+        background-size:cover;
 
     .flexbox &{display:flex;
         flex-direction:column;
@@ -206,6 +215,9 @@ section{
     float:left;
     position:relative;
     perspective:1000px;
+    &:hover{
+        cursor: pointer;
+    }
     @media screen and (min-width: 600px) {
        width:50%;
     }
@@ -228,7 +240,7 @@ section{
         left:0;
         height:100%;
         width:100%;
-        background-color: transparentize($grey, 0.6);
+        background-color: transparentize($black, 0.5);
         padding:2em 4em 2em 2em;
         opacity:0;
         //flex-browsers
@@ -242,8 +254,11 @@ section{
             opacity:1;
         }
         a.btn{
-            &:hover{transition:all 250ms ease-out;
+                transition:all 250ms ease-out;
                 background:$plum;
+            &:hover{
+                transition:all 250ms ease-out;
+                background:$grey;
             }
         }
     }
@@ -285,8 +300,9 @@ section{
 }
 
 
-.wrapper{
-    padding:0;
+.footer-container{
+    background-color:$grey;
+    padding:2em 0;
     margin:0;
     ul{
         display:flex;
@@ -296,7 +312,7 @@ section{
             margin-right: 1em;
             padding:0.5em;
             a{
-                color:$plum;
+                color:$white;
             }
         }
     }
