--- a/scss/main.scss
+++ b/scss/main.scss
@@ -125,6 +125,7 @@ body {
     font-family:'Oswald',gotham-book, sans-serif;
     background-color:$white;
     color:$white;
+    scroll-snap-type: proximity;
 }
 
 h1{
@@ -158,11 +159,16 @@ ul{padding:0;margin:0;}
     width:100%;
     max-width:1600px;
     margin:0 auto;
+
+    scroll-snap-coordinate: 0px 0px;
 }
 
 .header-container{
+    scroll-snap-coordinate: 0px 0px;
     height:95vh;
-
+    background:transparent url(img/header.jpg) no-repeat;
+        background-attachment:fixed;
+        background-size:cover;
     img{
         width:100%;
         border-radius: 0;
@@ -187,9 +193,7 @@ ul{padding:0;margin:0;}
     padding:25% 5%;
     z-index:1001;
 
-    background:transparent url(img/header.jpg) no-repeat;
-        background-attachment:fixed;
-        background-size:cover;
+
 
     .flexbox &{display:flex;
         flex-direction:column;
@@ -203,7 +207,7 @@ ul{padding:0;margin:0;}
         font-size: 2em;
     }
     @media screen and (min-width: 1200px) {
-        font-size:4em;
+        font-size:3em;
     }
 }
 
@@ -213,6 +217,7 @@ section{
     float:left;
     position:relative;
     perspective:1000px;
+    scroll-snap-coordinate: top;
     &:hover{
         cursor: pointer;
     }
@@ -292,7 +297,7 @@ section{
         font-weight:700;
         text-transform: uppercase;
     }
-    
+
     h3{
         margin-top:0.25em;
         color:darken($white,10);
@@ -303,7 +308,7 @@ section{
 .social-list{
     display:flex;
     flex-wrap: wrap;
-    justify-content: space-between;   
+    justify-content: space-between;
 }
 .social {
     list-style-type: none;
@@ -319,6 +324,7 @@ section{
     background-color:$grey;
     padding:2em 0;
     margin:0;
+    scroll-snap-coordinate: 0 bottom;
     ul{
         display:flex;
         justify-content:space-around;
