--- a/scss/main.scss
+++ b/scss/main.scss
@@ -159,7 +159,6 @@ ul{padding:0;margin:0;}
     width:100%;
     max-width:1600px;
     margin:0 auto;
-
     scroll-snap-coordinate: 0px 0px;
 }
 
@@ -187,27 +186,34 @@ ul{padding:0;margin:0;}
 .about{
     width:100%;
     height:100%;
-    text-align:center;
     position:relative;
-    text-shadow:0.07em 0.07em 0.05em $black;
-    padding:25% 5%;
+    padding:25% 0;
+    letter-spacing:0.05em;
     z-index:1001;
-
-
 
     .flexbox &{display:flex;
         flex-direction:column;
         justify-content:center;
-        padding:0 5%;
     }
+    
     p{
-        margin:0;
+        margin:0 0 0.25em 0;
+        font-size:1rem;
+    }
+    
+    h2,h3{
+        margin:0 0 0.25em 0;
+    }
+    
+    .text-highlight{
+        padding:0 5% 0 2.5%;
+        background-color: transparentize($plum, 0.5);
     }
     @media screen and (min-width: 600px) {
-        font-size: 2em;
+        font-size: 1.5em;
     }
     @media screen and (min-width: 1200px) {
-        font-size:3em;
+        font-size:2em;
     }
 }
 
@@ -217,7 +223,7 @@ section{
     float:left;
     position:relative;
     perspective:1000px;
-    scroll-snap-coordinate: top;
+    scroll-snap-coordinate:top;
     &:hover{
         cursor: pointer;
     }
@@ -294,7 +300,7 @@ section{
         line-height:1.2;
         margin:0;
         padding:0;
-        font-weight:700;
+        font-weight:400;
         text-transform: uppercase;
     }
 
@@ -303,7 +309,6 @@ section{
         color:darken($white,10);
         font-weight: normal;
     }
-
 }
 .social-list{
     display:flex;
